# modern-wasm-starter

./: .clang-format  .gitignore  .npmignore  README.md  package.json  tsconfig.json
.github/workflows/: build.yml  publish.yml  style.yml
__tests__/: wasm.ts
source/: index.ts  wasmWrapper.ts
wasm/: CMakeLists.txt  package-lock.cmake
wasm/cmake/: CPM.cmake
wasm/source/: declarations.cpp  main.cpp  wasmGlue.cpp  wasmGlue.h
